Fix compact table buttons and empty rows on mobile

--- a/htdocs/css/responsive.css
+++ b/htdocs/css/responsive.css
@@ -1408,16 +1408,16 @@
 	.data_grid.wf_meta_grid > ul > div:nth-child(3) { visibility: hidden; }
 	
 	/* 'Drag', 'Label', 'Type', 'Description', 'Actions' */
-	.data_grid.c_param_grid { grid-template-columns: 0px auto auto auto auto !important; }
-	.data_grid.c_param_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_param_grid { grid-template-columns: 40px auto auto 0px auto !important; }
+	.data_grid.c_param_grid > ul > div:nth-child(4) { visibility: hidden; }
 	
 	/* 'Enabled', 'Limit', 'Description', 'Actions' */
-	.data_grid.c_limit_grid { grid-template-columns: 0px auto auto auto !important; }
-	.data_grid.c_limit_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_limit_grid { grid-template-columns: 40px auto 0px auto !important; }
+	.data_grid.c_limit_grid > ul > div:nth-child(3) { visibility: hidden; }
 	
 	/* 'Enabled', 'Condition', 'Type', 'Description', 'Actions' */
-	.data_grid.c_action_grid { grid-template-columns: 0px auto auto auto auto !important; }
-	.data_grid.c_action_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_action_grid { grid-template-columns: 40px auto auto 0px auto !important; }
+	.data_grid.c_action_grid > ul > div:nth-child(4) { visibility: hidden; }
 	
 	/* '#', 'Subject', 'Type', 'Status', 'Assignees', 'Tags', 'Created', 'Actions' */
 	.data_grid.ticket_grid { grid-template-columns: min-content auto 0px auto 0px 0px 0px 0px !important; }
@@ -1900,18 +1900,18 @@
 	.data_grid.wf_meta_grid > ul > div:nth-child(4) { visibility: hidden; }
 	
 	/* 'Drag', 'Label', 'Type', 'Description', 'Actions' */
-	.data_grid.c_param_grid { grid-template-columns: 0px auto auto 0px auto !important; }
-	.data_grid.c_param_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_param_grid { grid-template-columns: 40px auto auto 0px 0px !important; }
 	.data_grid.c_param_grid > ul > div:nth-child(4) { visibility: hidden; }
+	.data_grid.c_param_grid > ul > div:nth-child(5) { visibility: hidden; }
 	
 	/* 'Enabled', 'Limit', 'Description', 'Actions' */
-	.data_grid.c_limit_grid { grid-template-columns: 0px auto auto auto !important; }
-	.data_grid.c_limit_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_limit_grid { grid-template-columns: 40px auto 0px auto !important; }
+	.data_grid.c_limit_grid > ul > div:nth-child(3) { visibility: hidden; }
 	
 	/* 'Enabled', 'Condition', 'Type', 'Description', 'Actions' */
-	.data_grid.c_action_grid { grid-template-columns: 0px auto auto 0px auto !important; }
-	.data_grid.c_action_grid > ul > div:nth-child(1) { visibility: hidden; }
+	.data_grid.c_action_grid { grid-template-columns: 40px auto auto 0px 0px !important; }
 	.data_grid.c_action_grid > ul > div:nth-child(4) { visibility: hidden; }
+	.data_grid.c_action_grid > ul > div:nth-child(5) { visibility: hidden; }
 	
 	/* '#', 'Subject', 'Type', 'Status', 'Assignees', 'Tags', 'Created', 'Actions' */
 	.data_grid.ticket_grid { grid-template-columns: min-content auto 0px 0px 0px 0px 0px 0px !important; }
